# dossier

./: .gitignore  CLAUDE.md  LICENSE  NPM_FUND_NOTES.txt  README.md  index.html  layered_perlin_sketch.html  package-lock.json  package.json  perlin_sketch.html  pyproject.toml  snap.sh  vite.config.js
Declaration_of_Independence/: raw_text.txt
matlack-declaration/: README.md
matlack-declaration/analysis/: bowl-ellipse-model.md  letter-families.md  nib-dynamics.md  stroke-construction.md
matlack-declaration/reference/context/ab_4x/: 01_paths
matlack-declaration/reference/context/afe_4x/: 01_paths
matlack-declaration/reference/context/bo_4x/: 01_paths
matlack-declaration/reference/context/fir_4x/: 01_paths
matlack-declaration/reference/context/for_4x/: 01_paths
matlack-declaration/reference/context/fro_4x/: 01_paths
matlack-declaration/reference/lowercase/a_4x/: 01_paths  02_paths  09_paths  10_paths
matlack-declaration/reference/lowercase/b_4x/: 01_paths  02_paths
matlack-declaration/tools/: fit_paths.py
src/: App.jsx  CrinklyDemo.jsx  CrumpledPaperBackground.jsx  Dossier.jsx  InkyDemo.jsx  InteractivePaperCanvas.jsx  PaperCanvasPanel.jsx  fonts.css  main.jsx  promptBank.js  theme.jsx
src/api/: schema.js
src/styles/: FontSampler.jsx  InkyDemo.jsx  InteractivePaperCanvas.jsx  MatlackCanvas.jsx  MatlackRenderer.jsx  MatlackReviewGrid.tsx  PaperCanvasPanel.jsx  README.md  inkText.js  matlackGlyphs.js  strokeRenderer.js  theme.jsx
